# job-agent

./: .gitignore  README.md  main.py  pyproject.toml  test_claude.py  test_extractor.py  test_scraper.py  test_tracker.py
agent/tools/: extractor.py  scraper.py
db/: tracker.py
